@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Text-CSV_XS
-version:             0.40
+version:             0.41
 abstract:            Comma-Separated Values manipulation routines
 license:             perl
 author:              
@@ -8,6 +8,7 @@ author:
 generated_by:        ExtUtils::MakeMaker version 6.44
 distribution_type:   module
 requires:     
+    perl:                      5.005
     Config:                        0
     DynaLoader:                    0
     IO::Handle:                    0
